이미지 태그 추가, 태그 검색 기능

--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -5,6 +5,16 @@
 
 <div class="container">
     <div>
+
+        <form action="/search" method="get" >
+            <h4> Tags </h4>
+            검색할 Tag: <input type="text" name="tagName"><br>
+            <hr>
+            <input type="submit" value="검색"/>
+        </form>
+
+
+        <hr>
         <table class="table table-striped">
             <thead>
             <tr>
