--- a/src/main/resources/templates/file.html
+++ b/src/main/resources/templates/file.html
@@ -9,6 +9,10 @@
 <h1>파일 업로드</h1>
 <form action="/upload" method="post" enctype="multipart/form-data">
     <input type="file" value="파일 선택" name="file"/>
+    <h4> Tags </h4>
+    Tag: <input type="text" name="tagName"><br>
+    Tag: <input type="text" name="tagName"><br>
+
     <hr>
     <input type="submit" value="업로드"/>
 </form>
