이미지 경로위치 재설정, method 이름 재설정, 검색 태그에 해당하는 이미지가 없을 때의 오류 해결

--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -28,7 +28,7 @@
 
             <tbody>
             <tr th:each="file : ${files}">
-                <td> <img th:src="@{'images/' + ${file.fileName}}" width="300" height="300"/> </td>
+                <td> <img th:src="@{'img/' + ${file.fileName}}" width="300" height="300"/> </td>
                 <td th:text="${file.fileName}"></td>
                 <td th:text="${file.fileType}"></td>
                 <td th:text="${file.createdDate}"></td>
