구글 계정을 통해 로그인&로그아웃 하기 이를 위해 config에 스프링 시쿠리티 설정, @LoginUser 어노테이션을 생성해 반복코드 삭제, 세션 저장소로 jdbc 데이터베이스 사용하기

--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -2,6 +2,24 @@
 {{>layout/header}}
 
 <h1>Hi~</h1>
+
+<!--로그인 출력-->
+<h3> 로그인 </h3>
+<div>
+    <div class="col-md-6">
+        {{#userName}} <!-- userName이 존재한다면-->
+            로그인 유저네임 : <span id="user"> {{userName}} </span>
+            <a href="/logout" class="btn btn-info active" role="button"> 로그아웃</a>
+        {{/userName}}
+        {{^userName}} <!-- userName이 존재하지 않는다면-->
+            <a href="/oauth2/authorization/google" class="btn btn-success active" role="button"> 구글 로그인 </a>
+        {{/userName}}
+
+    </div>
+</div>
+
+
+
 <br>
 
 <div class="form-group">
