--- a/src/main/resources/static/css/Main.css
+++ b/src/main/resources/static/css/Main.css
@@ -1,14 +1,12 @@
-.header{
-    top: 0px;
-    display: block;
-    background-color: palegreen;
-    position: fixed;
-    width: 100%;
-    height:50px;
+#username {
+    color: #ffc107;
+    text-decoration: underline;
 }
 
-body {
-    margin-top: 50px;
-    background-color: aliceblue;
+#search_tag{
+    text-align: center;
+}
 
+#error{
+    color: #c82333;
 }
