파일의 업로드 용량 128MB로 증가, 버튼의 이미지화&크기조정, mysql에 한글 깨짐 오류 해결-> url변경, DB charset 변경

--- a/src/main/resources/static/css/Main.css
+++ b/src/main/resources/static/css/Main.css
@@ -3,10 +3,31 @@
     text-decoration: underline;
 }
 
-#search_tag{
+#align_center{
     text-align: center;
+    margin: auto;
 }
 
 #error{
     color: #c82333;
+}
+
+body{
+    background-color: aliceblue;
+}
+
+.container:not(#header){
+    background-color:white;
+}
+
+.button{
+    font-size: 15px;
+    padding-top: 5px;
+    height: 36px;
+    text-align: center;
+}
+
+.input_text{
+    position: relative;
+    top: 3px;
 }
