1. 로그인 한사람만 태그 추가 가능 하도록 (태그 추가기능) 2. 이미지파일 암호화 (빠른 HASH 함수 사용) -> 이름 암호화 3. 태그기능 수정(,로 ) 4. 사진 개수 많을때 분리해주기 -> 10개씩 5. 사진 크기 압축하지 않고 가운데만 표시하기 6. 업로드 페이지 css 추가 (페이지 폰트 수정 및 박스 선 추가) 7. 어드민에게만 image, tag 삭제할 수 있는 권한 주기 -> /admin/**은 어드민만 접근 가능함 8. 로그인 페이지 만들고 그쪽에 로그인 버튼 만들기 (현재 있는 로그인 버튼들 빼기)

--- a/src/main/resources/static/css/Main.css
+++ b/src/main/resources/static/css/Main.css
@@ -4,6 +4,7 @@
 }
 
 #align_center{
+    font-family: Impact;
     text-align: center;
     margin: auto;
 }
@@ -38,4 +39,28 @@ body{
 
 #next{
     text-align: right;
+}
+
+.cropping{
+    overflow: hidden;
+    position: relative;
+
+}
+.cropping img {
+    object-fit: cover;
+    object-position: bottom;
+}
+
+.container-box{
+    border-style: double;
+    border-color: aquamarine;
+}
+
+.container-box h1 {
+    border-bottom-style: dashed;
+    border-bottom-color: lightcyan;
+}
+
+.container-login{
+    width: 400px;
 }
