--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -12,6 +12,14 @@
         return uri.split("&")[0];
     }
 
+    function nextPage(index, searchCheck){
+        if (!searchCheck)
+            window.location.href= "/gallery?page=" + (index+1);
+        else
+            window.location.href= window.location.pathname+ searchUri( window.location.search ) +"&page=" + (index+1);
+    }
+
+
 </script>
 
 <!-- Page Content -->
@@ -31,10 +39,16 @@
     <div class="row text-center text-lg-left">
 
         {{#files}}
-            <div class="col-lg-3 col-md-4 col-6">
+            <div class="col-lg-3 col-md-4 col-6 cropping">
+                {{#userRole}}
+                <a href="/admin/removeMemeFile/{{id}}"> <input type="button" class="button btn" style="background-color: #c82333;text-decoration-color: aliceblue" value="삭제"/> </a>
+                {{/userRole}}
+
                 <a href="/files/{{id}}" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="/img/{{fileName}}"  style="width:400px; height:300px;" alt="">
                 </a>
+
+
             </div>
         {{/files}}
 
@@ -42,11 +56,28 @@
 
 
     <div class="row">
-        <div class="col-sm-6" id="align_center">
+
+        <div class="col-sm-4" id="previous">
+            {{^files.first}}
+                <a href="javascript:page(1 , {{searchCheck}})" role="button" class="btn btn-secondary"> << </a>
+                <a href="javascript:page({{currentPage}} , {{searchCheck}})" role="button" class="btn btn-secondary">&larr; 이전</a>
+            {{/files.first}}
+        </div>
+
+        <div class="col-sm-4" id="align_center">
+
             {{#pages}}
                 <a href="javascript:page({{.}} , {{searchCheck}})" > {{.}} </a>
             {{/pages}}
         </div>
+
+        <div class="col-sm-4" id="next">
+            {{^files.last}}
+                <a href="javascript:nextPage({{currentPage}} , {{searchCheck}})" role="button" class="btn btn-secondary" >다음 &rarr;</a>
+                <a href="javascript:page({{lastPage}} , {{searchCheck}})" role="button" class="btn btn-secondary" > >> </a>
+            {{/files.last}}
+        </div>
+
     </div>
 
     <br>
