--- a/src/main/resources/templates/uploadfile.mustache
+++ b/src/main/resources/templates/uploadfile.mustache
@@ -1,55 +1,46 @@
 
 {{>layout/header}}
 
-<script type="text/javascript">
-    function add_tag(){
-        var div = document.createElement('div');
-        div.innerHTML = document.getElementById('upload_memefile_tag').innerHTML;
-        document.getElementById('field').appendChild(div);
-    }
-
-    function remove_tag(){
-        var tag = document.getElementById('field');
-        tag.removeChild(tag.childNodes[tag.childElementCount-1]);
-    }
-</script>
-
-<div class="container" >
-    <h1 class="my-4" id="align_center">파일 업로드</h1>
+<br>
+<div class="container container-box" >
+    <h1 class="my-4" id="align_center"><pre>이미지 업로드<br></pre></h1>
     <br>
-    {{!#error}}
-<!--        <h4 id="error" style="text-align: center;">{{!.}}</h4>-->
-    {{!/error}}
 
 
 
     <div class="col-md-12" >
-        <div class="col-md-4" id="align_center">
 
-            <form action="/upload" method="post" enctype="multipart/form-data" accept-charset="UTF-8"  id="align_center">
+        <form action="/upload" method="post" enctype="multipart/form-data" accept-charset="UTF-8"  id="align_center">
 
-                <h4> 파일 선택 </h4>
-                <small id="error">파일의 크기는 128MB이하만 가능합니다.</small>
-                <div class="form-group">
-                    <input class="form-control" type="file" value="파일 선택" name="file"/>
+                <div class="row">
+                <div class="col-md-6" id="align_center">
+                    <h4> 이미지 선택 </h4>
+                    <small id="error">파일의 크기는 128MB이하만 가능합니다.</small>
+                    <div class="form-group">
+                        <input class="form-control" type="file" value="파일 선택" name="file"/>
+                    </div>
                 </div>
 
-                <h4> Tags</h4>
-                <input type="button" value="추가" onclick="add_tag()">
-                <input type="button" value="삭제" onclick="remove_tag(this)">
-
-                <br>
-                <div class="form-group" id="upload_memefile_tag">
-                    Tag: <input class="form-control" type="text" name="tagName">
+                <div class="col-md-6">
+                    <h4> Tags</h4>
+                    <br>
+                    <div class="form-group" id="upload_memefile_tag">
+                        <input class="form-control" type="text" name="tagName">
+                    </div>
                 </div>
-                <div id="field"></div>
+                </div>
 
-                <hr>
-                <input class="btn btn-primary" type="submit" value="업로드"/>
+            <br>
+            <hr>
+<!--            <br>-->
+
+                <input class="btn btn-primary" type="submit" value="업로드"/> &nbsp; &nbsp;
                 <a href="/" role="button" class="btn btn-secondary">취소</a>
-            </form>
 
-        </div>
+        </form>
     </div>
+
+    <br>
 </div>
+
 {{>layout/footer}}
